--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,82 @@
 body {
+    width: 95%;
+    margin: 4%;
     font-family: sans-serif;
-    margin-left: 20px;
-    margin-top: 40px;
-    margin-right:20px;
+    flex-direction: column;
+    justify-content: left;
+    display: inline-block;
+    line-height: 1.7em;
+}
+
+button{
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top:16px;
+    padding-bottom:16px;
+    border-width: 1px;
+    border-color: black;
+    background-color: transparent;
+    color: black;
+    font-size: 16px;
+    border-radius: 4px;
+}
+
+button:hover{
+    cursor: pointer;
+    border-color: black;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border-radius: 4px;
+}
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+}
+
+.wide {
+    grid-column: span 2; /* Occupies 2 columns */
+}
+
+.grid-item {
+    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    padding: 0%; /* Creates a square by setting height equal to width */
+}
+
+/* Media queries for responsiveness */
+
+@media (max-width: 1200px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+        gap:40px;
+    }
+}
+
+@media (max-width: 900px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap:40px;
+    }
+    
+    .grid-item {
+        grid-column: span 2;
+    }
+}
+
+@media (max-width: 600px) {
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap:40px;
+    }
+    .wide {
+        grid-column: span 1; /* Occupies 2 columns */
+    }
 }
