--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ button:hover{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-
+    width:80%;
 }
 
 .wide {
@@ -61,11 +61,28 @@ button:hover{
     flex-direction: column;
     align-items: flex-start;
     justify-content: left;
+    gap:10px;
     padding: 0%; /* Creates a square by setting height equal to width */
 }
 
 .grid-content{
-    width:80%;
+    display: block;
+    width: 100%;
+}
+
+.inner-grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.inner-grid-item {
+ 
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: left;
+    padding: 0%; /* Creates a square by setting height equal to width */
 }
 
 /* Media queries for responsiveness */
@@ -73,20 +90,22 @@ button:hover{
 @media (max-width: 1200px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
-        gap:1.7em;
+        gap:20px;
+        width:95%;
     }
 }
 
 @media (max-width: 900px) {
     .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        padding-left: 20px;
-        padding-right: 20px;
-
+        grid-template-columns: repeat(1, 1fr);
     }
     
     .grid-item {
         grid-column: span 2;
+    }
+
+    .wide {
+        grid-column: span 1; /* Occupies 2 columns */
     }
 
     .grid-content{
@@ -101,5 +120,9 @@ button:hover{
     }
     .wide {
         grid-column: span 1; /* Occupies 2 columns */
+    }
+
+    .grid-content{
+        width: 100%;
     }
 }
