--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ button:hover{
 @media (max-width: 900px) {
     .grid-container {
         grid-template-columns: repeat(1, 1fr);
-        
+        width:100%;
     }
     
     .grid-item {
@@ -110,9 +110,7 @@ button:hover{
         grid-column: span 1; /* Occupies 2 columns */
     }
 
-    .grid-content{
-        
-    }
+
 }
 
 @media (max-width: 600px) {
