--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    width: 100vw;
+    width: 100%;
     margin: 4%;
     font-family: sans-serif;
     flex-direction: column;
@@ -8,6 +8,13 @@ body {
     line-height: 1.7em;
     overflow-x:hidden;
     color: rgb(161, 161, 161); 
+}
+
+.navbar{
+    position:sticky;
+    position: -webkit-sticky;
+    top:40px;
+    height:100vh;
 }
 
 b{
@@ -69,13 +76,12 @@ button:hover{
 }
 
 .grid-content{
-  
     width: 100%;
 }
 
 .inner-grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
 
@@ -91,17 +97,33 @@ button:hover{
 /* Media queries for responsiveness */
 
 @media (max-width: 1200px) {
+
+    body{
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top:40px;
+    }
     .grid-container {
-        grid-template-columns: repeat(3, 1fr);
+
         gap:20px;
-        width:95%;
+        width:90%;
+    }
+
+    .inner-grid-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
     }
 }
 
 @media (max-width: 900px) {
+    body{
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top:20px;
+    }
     .grid-container {
         grid-template-columns: repeat(1, 1fr);
-        width:95%;
+        
     }   
     .grid-item {
         grid-column: span 2;
@@ -110,12 +132,25 @@ button:hover{
     .wide {
         grid-column: span 1; /* Occupies 2 columns */
     }
+
+    .inner-grid-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+
+    .navbar{
+        position:static;
+        height:auto;
+    }
+    
 }
 
 @media (max-width: 600px) {
+    body{
+        margin-top:20px;
+    }
     .grid-container {
-        grid-template-columns: repeat(1, 1fr);
-        width:95%;
+        padding:10px; 
     }
     .wide {
         grid-column: span 1; /* Occupies 2 columns */
