--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,31 @@ button{
     border-radius: 4px;
 }
 
+.connect{
+    margin-bottom: 7px;
+}
+
+button2{
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top:6px;
+    padding-bottom:6px;
+    border-width: 1px;
+    border-color: transparent;
+    background-color: rgb(238, 238, 238);
+    color: black;
+    font-size: 14px;
+    border-radius: 4px;
+
+}
+
+button2:hover{
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    font-size: 14px;
+}
+
 button:hover{
     cursor: pointer;
     border-color: black;
@@ -83,6 +108,7 @@ button:hover{
 
 .grid-content{
     width: 100%;
+    height:max-content;
 }
 
 .inner-grid-container {
